--- a/solarSystem.html
+++ b/solarSystem.html
@@ -10,7 +10,8 @@
 		<script src="../libs/jquery-3.3.1/jquery-3.3.1.js"></script>
 		<script src="../libs/jquery-ui/jquery-ui.js"></script>
 		<script src="../libs/three.js/three.js"></script>
-
+		
+		<script src="planets.js"></script>
 		<script src="solarSystem.js"></script>
 
 		<script type="text/javascript">
