--- a/solarSystem.html
+++ b/solarSystem.html
@@ -10,6 +10,7 @@
 		<script src="../libs/jquery-3.3.1/jquery-3.3.1.js"></script>
 		<script src="../libs/jquery-ui/jquery-ui.js"></script>
 		<script src="../libs/three.js/three.js"></script>
+		<script src="../libs/three.js/controls/OrbitControls.js"></script>
 		
 		<script src="planets.js"></script>
 		<script src="solarSystem.js"></script>
