--- a/solarSystem.html
+++ b/solarSystem.html
@@ -11,6 +11,7 @@
 		<script src="../libs/jquery-ui/jquery-ui.js"></script>
 		<script src="../libs/three.js/three.js"></script>
 		<script src="../libs/three.js/controls/OrbitControls.js"></script>
+		<script src="../libs/three.js/loaders/OBJLoader.js"></script>
 		
 		<script src="planets.js"></script>
 		<script src="solarSystem.js"></script>
